tests/data/parseerror/invalid-parameter-2.php
<?php

function foo(\\ var $bar)
{

}
